# leafagro

./: 404.html  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: installation.yml
changelog/: index.html
common/: index.html
contributing/: contributing.md  index.html
docs/: common.md  index.md  utils.md
docs/examples/: agriMonitor.ipynb  csv.ipynb  folium.ipynb  intro.ipynb  ipyWidgets.ipynb  landsat.html  leafagro.ipynb  raster.ipynb  utils.ipynb  vector.ipynb
examples/: landsat.html
examples/agriMonitor/: agriMonitor.ipynb  index.html
examples/csv/: index.html
examples/folium/: folium.ipynb  index.html
examples/intro/: index.html
examples/ipyWidgets/: index.html
examples/leafagro/: index.html
examples/raster/: index.html  raster.ipynb
examples/toolbar/: index.html  toolbar.ipynb
examples/utils/: index.html
examples/vector/: index.html
faq/: index.html
installation/: index.html  installation.md
leafagro/: __init__.py  agromonitoring.py  foliumap.py  index.html  leafagro.md  leafagro.py  utils.py
search/: search_index.json
tests/: __init__.py  test_leafagro.py
usage/: index.html  usage.md
utils/: index.html
